--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <div class="logo">
-        <img src="./images/img-tea-cozy-logo.png">
+        <img src="img-tea-cozy-logo.png">
         </div>
 
         <div class="nav">
@@ -39,7 +39,7 @@
         <div class="images">
             <div class="image">
                 <div>
-                    <img  src="./images/container/img-berryblitz.jpg" height="200px" width="300px">
+                    <img  src="img-berryblitz.jpg" height="200px" width="300px">
                     <p>Fall Berry Blitz Tea</p>
                 </div>
             </div>
@@ -47,28 +47,28 @@
 
             <div class="image">
                 <div>
-                    <img  src="./images/container/img-spiced-rum.jpg" height="200px" width="300px">
+                    <img  src="img-spiced-rum.jpg" height="200px" width="300px">
                     <p>Spiced Rum Tea</p>
                 </div>
             </div>
 
             <div class="image">
                 <div>
-                    <img  src="./images/container/img-donut.jpg" height="200px" width="300px">
+                    <img  src="img-donut.jpg" height="200px" width="300px">
                     <p>Seasonal Donuts</p>
                 </div>
             </div>
 
             <div class="image">
                 <div>
-                    <img  src="./images/container/img-myrtle-ave.jpg" height="200px" width="300px">
+                    <img  src="img-myrtle-ave.jpg" height="200px" width="300px">
                     <p>Mytle Ave Tea</p>
                 </div>
             </div>
 
             <div class="image">
                 <div>
-                    <img  src="./images/container/img-bedford-bizarre.jpg" height="200px" width="300px">
+                    <img  src="img-bedford-bizarre.jpg" height="200px" width="300px">
                     <p>Bedford Bizzare Tea</p>
                 </div>
             </div>
